# sane-controlnet-aux

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/controlnet_aux/: __init__.py  utils.py
src/controlnet_aux/base/: detector.py
src/controlnet_aux/canny/: __init__.py  detector.py
src/controlnet_aux/depth_anything/: __init__.py
src/controlnet_aux/depth_anything/v2/: __init__.py  detector.py  utils.py
src/controlnet_aux/dwpose/: __init__.py  body.py  detector.py  face.py  hand.py  processor.py  types.py  util.py  wholebody.py
src/controlnet_aux/dwpose/dw_onnx/: cv_ox_yolo_nas.py
src/controlnet_aux/hed/: __init__.py  detector.py  model.py
src/controlnet_aux/lineart/: __init__.py  detector.py  generator.py
src/controlnet_aux/midas/: __init__.py  detector.py  model.py  utils.py
src/controlnet_aux/midas/MiDaS/: hubconf.py
src/controlnet_aux/midas/MiDaS/midas/: base_model.py  blocks.py  dpt_depth.py  model_loader.py
src/controlnet_aux/midas/MiDaS/midas/backbones/: beit.py  next_vit.py  vit.py
src/controlnet_aux/mlsd/: __init__.py  detector.py  utils.py
src/controlnet_aux/mlsd/models/: mbv2_mlsd_large.py
src/controlnet_aux/pidi/: __init__.py  detector.py  model.py
src/controlnet_aux/sam/: __init__.py  detector.py  sam_registry.py  tiny_vit_sam.py
src/controlnet_aux/scribble/: __init__.py  detector.py
src/controlnet_aux/teed/: Xsmish.py  __init__.py  detector.py  model.py
src/controlnet_aux/zoe/: __init__.py  detector.py
tests/: conftest.py  test_canny.py  test_depth_anything_v2.py  test_dwpose.py  test_hed.py  test_lineart.py  test_midas.py  test_mlsd.py  test_pidi.py  test_sam.py  test_scribble.py  test_teed.py  test_zoe.py
